Amazon payments review

--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.de-de.xml
@@ -8,14 +8,20 @@
 
 	<LocaleResource Name="AdminInstruction">
 		<Value>
-			<![CDATA[<p>Anleitung zum Einrichten von "Bezahlen mit Amazon":</p><ul>
-			<li>Tragen Sie Ihre Amazon-Zugangsdaten unten in die dafür vorgesehenen Felder ein. Sie finden diese Daten in Ihrem <a href="https://sellercentral-europe.amazon.com" target="_blank">Amazon Seller Central</a> Konto.</li>
-			<li>Ihre Händlernummer finden Sie dort rechts oben unter Einstellungen - Integrationseinstellungen.</li>
-			<li>Die beiden Zugangsschlüssel finden Sie dort links oben unter Integration - MWS Access Key.</li>
-			<li>Falls Sie Sofortbenachrichtigungen (IPN) erhalten möchten (SSL zwingend erforderlich!), so tragen Sie die unten aufgeführte IPN URL unter Einstellungen - Integrationseinstellungen - Sofortbenachrichtigungs-Einstellungen - Händler-URL ein.</li>
-			</ul>
-			<p>Hinweis! Die Rechnungsadresse des Kunden erhalten Sie erst nach Bestätigung der Zahlungsautorisierung von Amazon, also i.d.R. erst kurz nach Versand der Bestellbestätigungs-Email. Um Missverständnisse zu vermeiden ist es ratsam, den Platzhalter für die Rechnungsadresse aus der Nachrichtenvorlage für die Bestellbestätigung zu entfernen.
-			</p>]]>
+			<![CDATA[<p>Registrieren Sie sich bei <a href="https://payments.amazon.de/preregistration/lpa">Amazon Payments</a> an.</p>
+<p>So richten Sie "Bezahlen mit Amazon" ein:</p><ul>
+<li>Tragen Sie Ihre Amazon-Zugangsdaten unten in die dafür vorgesehenen Felder ein. Sie finden diese Daten in Ihrem <a href="https://sellercentral-europe.amazon.com" target="_blank">Amazon Seller Central</a> Konto.</li>
+<li>Ihre Händlernummer finden Sie dort rechts oben unter Einstellungen - Integrationseinstellungen.</li>
+<li>Die beiden Zugangsschlüssel finden Sie dort links oben unter Integration - MWS Access Key. In <a href="http://download.smartstore.com/pub/docs/14_Amazon_Payments_Getting_AWS_Keys_DE.pdf">diesem Dokument</a> finden Sie Bilder, wie Sie diese erstellen.</li>
+<li>Falls Sie Sofortbenachrichtigungen (IPN) erhalten möchten (SSL zwingend erforderlich!), so tragen Sie die unten aufgeführte IPN URL unter Einstellungen - Integrationseinstellungen - Sofortbenachrichtigungs-Einstellungen - Händler-URL ein.</li>
+</ul>
+<p>Hinweis! Die Rechnungsadresse des Kunden erhalten Sie erst nach Bestätigung der Zahlungsautorisierung von Amazon, also i.d.R. erst kurz nach Versand der Bestellbestätigungs-Email. Um Missverständnisse zu vermeiden ist es ratsam, den Platzhalter für die Rechnungsadresse aus der Nachrichtenvorlage für die Bestellbestätigung zu entfernen.</p>
+<p>Bitte fügen Sie Informationen zu "Bezahlen mit Amazon" auf Ihrer Seite der Zahlungsarten ein (siehe CMS - Seiten). Bildmaterial finden Sie <a href="https://payments.amazon.de/resources#marks">hier</a>.
+Textvorschläge:<ul>
+<li>Option 1: Bezahlen mit Amazon: Zahlen Sie jetzt mit den Zahl- und Lieferinformationen aus Ihrem Amazon-Konto.</li>
+<li>Option 2: Sie sind Amazon-Kunde? Zahlen Sie jetzt mit den Zahl- und Lieferinformationen aus Ihrem Amazon-Konto.</li>
+<li>Option 3: Sie sind Amazon-Kunde? Zahlen Sie jetzt mit den Daten aus Ihrem Amazon-Konto.</li>
+</ul></p>]]>
 		</Value>
 	</LocaleResource>
 	<LocaleResource Name="MissingOrderReferenceId">
@@ -174,25 +180,25 @@
 		<Value>Legt fest, dass der "Bezahlen mit Amazon" Button auch im Miniwarenkorb angezeigt werden soll.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddressWidgetWidth">
-		<Value>Breite des Adressen-Widget</Value>
+		<Value>Breite des Adressen-Widgets</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddressWidgetWidth.Hint">
 		<Value>In Pixel. Gültige Werte für einspaltige Widgets sind 200 bis 399 und für zweispaltige Widgets 400 bis 600.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddressWidgetHeight">
-		<Value>Höhe des Adressen-Widget</Value>
+		<Value>Höhe des Adressen-Widgets</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddressWidgetHeight.Hint">
 		<Value>In Pixel. Gültige Werte sind 228 bis 400.</Value>
 	</LocaleResource>
 	<LocaleResource Name="PaymentWidgetWidth">
-		<Value>Breite des Zahlungs-Widget</Value>
+		<Value>Breite des Zahlungs-Widgets</Value>
 	</LocaleResource>
 	<LocaleResource Name="PaymentWidgetWidth.Hint">
 		<Value>In Pixel. Gültige Werte für einspaltige Widgets sind 200 bis 399 und für zweispaltige Widgets 400 bis 600.</Value>
 	</LocaleResource>
 	<LocaleResource Name="PaymentWidgetHeight">
-		<Value>Höhe des Zahlungs-Widget</Value>
+		<Value>Höhe des Zahlungs-Widgets</Value>
 	</LocaleResource>
 	<LocaleResource Name="PaymentWidgetHeight.Hint">
 		<Value>In Pixel. Gültige Werte sind 228 bis 400.</Value>
