--- a/src/Plugins/SmartStore.ShippingByWeight/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.ShippingByWeight/Localization/resources.de-de.xml
@@ -9,6 +9,12 @@
   <LocaleResource Name="Fields.Country.Hint">
     <Value>Das Bestimmungsland. Wählen Sie Stern (*), wenn das Land des Kunden bei der Auswertung keine Rolle spielen soll.</Value>
   </LocaleResource>
+  <LocaleResource Name="Fields.Zip">
+    <Value>PLZ-(Bereich)</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.Zip.Hint">
+    <Value>PLZ-(Bereich) des Kunden, entweder als spezifischer Wert oder als Muster (z.B. 4000-49999 für das PLZ-Gebiet 4). In einem Muster lassen sich auch Wildcards verwenden, wie Stern (*) oder Fragezeichen (?). Lassen Sie das Feld leer, wenn die Gebühr unabhängig von PLZ für alle Kunden im definierten (Bundes)land gelten soll.</Value>
+  </LocaleResource>
   <LocaleResource Name="Fields.ShippingMethod">
     <Value>Versandart</Value>
   </LocaleResource>
