--- a/src/Plugins/SmartStore.ShippingByWeight/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.ShippingByWeight/Localization/resources.en-us.xml
@@ -8,6 +8,12 @@
   <LocaleResource Name="Fields.Country.Hint">
     <Value>If an asterisk is selected, then this shipping rate will apply to all customers, regardless of the country.</Value>
   </LocaleResource>
+  <LocaleResource Name="Fields.Zip">
+    <Value>Zip-(Range)</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.Zip.Hint">
+    <Value>Zip/postal code (range), either as specific value or range pattern (e.g. 4000-4999). You can also define wildcard chars like * or ?. If zip is empty, then this shipping rate will apply to all customers from the given country or state / province, regardless of the zip code.</Value>
+  </LocaleResource>
   <LocaleResource Name="Fields.ShippingMethod">
     <Value>Shipping method</Value>
   </LocaleResource>
